--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -147,9 +147,9 @@
     </div>
   </div>
   <div class="d-flex justify-content-center sb-text-footer"
-       style="max-height: 7vh; position: absolute; left: 0; width: 100%;bottom: 0; font-size: 1.5vh;">
+       style="position: absolute; left: 0; width: 100%">
     <div class="form-group text-center">
-      <div class="text-note" style="font-size: 1.5vh;">
+      <div class="text-note">
         Hội sở: 25 Trần Hưng Đạo, Hoàn Kiếm, Hà Nội | Điện thoại: (+84 24) 3944 8688 | Fax: (+84 24) 3944 8689
         <br/>
         Website: http://www.seabank.com.vn | Email: contact@seabank.com.vn
