--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -96,7 +96,24 @@
   }
 }
 
+.sb-text-footer {
+  height: 7vh;
+  top: 93vh;
+  & * {
+    font-size: 1.6vh;
+  }
+
+  @media only screen and (min-device-width: 480px) and (max-height: 50vw) {
+    top: 47vw !important;
+    height: 3vw !important;
+    & * {
+      font-size: 0.8vw !important;
+    }
+  }
+}
+
 .sb-login-custom-form {
+  min-height: 50vw;
   position: relative;
   height: 100vh;
   margin-right: 10%;
@@ -190,6 +207,70 @@
   -o-background-size: inherit;
   font-family: 'Arial', sans-serif;
   filter: alpha(opacity=0.7);
+
+  min-width: 30vw;
+  min-height: 50vw;
+
+  @media only screen and (min-device-width: 480px) and (max-height: 50vw) {
+    & * {
+      font-size: 0.95vw;
+    }
+
+    .sb-login-logo img {
+      height: 4.25vw;
+    }
+
+    .sb-login-welcome {
+      & * {
+        font-size: 1.2vw;
+      }
+
+      & img {
+        height: 1.25vw;
+        padding-bottom: 0.335vw;
+      }
+    }
+
+    .sb-login-text-error {
+      & * {
+        font-size: 0.8vw;
+      }
+    }
+
+    .sb-login-text-lang {
+      & * {
+        font-size: 1vw;
+      }
+
+      & span {
+        margin-right: 1vw;
+      }
+
+      & i {
+        margin-right: 0.5vw;
+      }
+    }
+
+    .sb-login-text-form {
+      & img {
+        position: absolute;
+        z-index: 1;
+        background-color: #664242;
+        height: 0.8vw;
+        bottom: 0.4vw;
+        width: 0.9vw;
+      }
+
+      & i {
+        position: absolute;
+        z-index: 1;
+        background-color: #664242;
+        height: 0.77vw;
+        bottom: 0.4vw;
+        width: 0.9vw;
+      }
+    }
+  }
 }
 
 .bg-login-mobile {
