--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -4,40 +4,40 @@
       <input [(ngModel)]="input1" #inputOtp1 id="input-otp-1" type="text"
              class="input-otp form-control text-center"
              pattern="[0-9]*" inputmode="numeric"
-             onkeypress='return event.charCode >= 48 && event.charCode <= 57'
              (keydown)="focus($event, 1, inputOtp1 , inputOtp2)"
+             onkeydown='return event.which >= 48 && event.which <= 57'
              [disabled]="dataLoading | async"
-             (keyup)="focusInput($event, 1, inputOtp1 , inputOtp2)" maxlength="1">
+             (keyup)="focusInput($event, 1, inputOtp1 , inputOtp2)" maxlength="10">
       <input [(ngModel)]="input2" #inputOtp2 id="input-otp-2" type="text"
              class="input-otp form-control text-center"
              pattern="[0-9]*" inputmode="numeric"
-             onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+             onkeydown='return event.charCode >= 48 && event.charCode <= 57'
              (keydown)="focus($event, 2, inputOtp1 , inputOtp3)"
              [disabled]="dataLoading | async"
              (keyup)="focusInput($event, 2, inputOtp1, inputOtp3)" maxlength="1">
       <input [(ngModel)]="input3" #inputOtp3 id="input-otp-3" type="text"
-             onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+             onkeydown='return event.charCode >= 48 && event.charCode <= 57'
              class="input-otp form-control text-center"
              pattern="[0-9]*" inputmode="numeric"
              (keydown)="focus($event, 3, inputOtp2 , inputOtp4)"
              [disabled]="dataLoading | async"
              (keyup)="focusInput($event, 3, inputOtp2, inputOtp4)" maxlength="1">
       <input [(ngModel)]="input4" #inputOtp4 id="input-otp-4" type="text"
-             onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+             onkeydown='return event.charCode >= 48 && event.charCode <= 57'
              class="input-otp form-control text-center"
              pattern="[0-9]*" inputmode="numeric"
              (keydown)="focus($event, 4, inputOtp3 , inputOtp5)"
              [disabled]="dataLoading | async"
              (keyup)="focusInput($event, 4, inputOtp3, inputOtp5)" maxlength="1">
       <input [(ngModel)]="input5" #inputOtp5 id="input-otp-5" type="text"
-             onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+             onkeydown='return event.charCode >= 48 && event.charCode <= 57'
              class="input-otp form-control text-center"
              pattern="[0-9]*" inputmode="numeric"
              (keydown)="focus($event, 5, inputOtp4 , inputOtp6)"
              [disabled]="dataLoading | async"
              (keyup)="focusInput($event, 5, inputOtp4, inputOtp6)" maxlength="1">
       <input [(ngModel)]="input6" #inputOtp6 id="input-otp-6" type="text"
-             onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+             onkeydown='return event.charCode >= 48 && event.charCode <= 57'
              class="input-otp form-control text-center"
              pattern="[0-9]*" inputmode="numeric"
              (keydown)="focus($event, 6, inputOtp5 , inputOtp6)"
@@ -45,8 +45,12 @@
              (keyup)="focusInput($event, 6, inputOtp5, inputOtp6)" maxlength="1">
     </div>
     <div class="col-8 offset-2">
-      <div class="my-5">evenStringKeyDown: {{(evenStringKeyDown | async) | json}}</div>
-      <div>evenStringKeyUp: {{(evenStringKeyUp | async) | json}}</div>
+      <div class="my-5">evenStringKeyDown:key {{(evenStringKeyDown | async)?.key}}</div>
+      <div class="my-5">evenStringKeyDown:which {{(evenStringKeyDown | async)?.which}}</div>
+      <div class="my-5">evenStringKeyDown:charCode {{(evenStringKeyDown | async)?.charCode}}</div>
+      <div>evenStringKeyUp:key {{(evenStringKeyUp | async)?.key}}</div>
+      <div>evenStringKeyUp:which {{(evenStringKeyUp | async)?.which}}</div>
+      <div>evenStringKeyUp:charCode {{(evenStringKeyUp | async)?.charCode}}</div>
     </div>
   </div>
 </div>
