--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -4,6 +4,7 @@
       <input [(ngModel)]="input1" #inputOtp1 id="input-otp-1" type="text"
              class="input-otp form-control text-center"
              pattern="[0-9]*" inputmode="numeric"
+             onkeydown="return event.which >= 48 && event.which <= 57;"
              (keydown)="focus($event, 1, inputOtp1 , inputOtp2)"
              [disabled]="dataLoading | async"
              (keyup)="focusInput($event, 1, inputOtp1 , inputOtp2)" maxlength="1">
