--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -44,6 +44,13 @@
              [disabled]="dataLoading | async"
              (keyup)="focusInput($event, 6, inputOtp5, inputOtp6)" maxlength="1">
     </div>
+    <div class="form-group">
+      <input type="text" onkeydown="return (event.which >= 48 && event.which <= 57) || (event.which >= 65 && event.which <= 90);">
+      <input type="text"
+             (keydown)="addSpace($event, ppppp)"
+             (keyup)="deleteSpace($event, ppppp)"
+             #ppppp>
+    </div>
     <div class="col-8 offset-2">
       <div class="my-5">evenStringKeyDown:key {{(evenStringKeyDown | async)?.key}}</div>
       <div class="my-5">evenStringKeyDown:which {{(evenStringKeyDown | async)?.which}}</div>
