--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -52,12 +52,16 @@
              #ppppp>
     </div>
     <div class="col-8 offset-2">
-      <div class="my-5">evenStringKeyDown:key {{(evenStringKeyDown | async)?.key}}</div>
-      <div class="my-5">evenStringKeyDown:which {{(evenStringKeyDown | async)?.which}}</div>
-      <div class="my-5">evenStringKeyDown:charCode {{(evenStringKeyDown | async)?.charCode}}</div>
-      <div>evenStringKeyUp:key {{(evenStringKeyUp | async)?.key}}</div>
-      <div>evenStringKeyUp:which {{(evenStringKeyUp | async)?.which}}</div>
-      <div>evenStringKeyUp:charCode {{(evenStringKeyUp | async)?.charCode}}</div>
+      <div class="my-3">evenStringKeyDown:key {{(evenStringKeyDown | async)?.key}}</div>
+      <div class="my-3">evenStringKeyDown:which {{(evenStringKeyDown | async)?.which}}</div>
+      <div class="my-3">evenStringKeyDown:charCode {{(evenStringKeyDown | async)?.charCode}}</div>
+      <div class="my-3">evenStringKeyDown:code {{(evenStringKeyDown | async)?.code}}</div>
+      <div class="my-3">evenStringKeyDown:keyCode {{(evenStringKeyDown | async)?.keyCode}}</div>
+      <div class="my-3">evenStringKeyUp:key {{(evenStringKeyUp | async)?.key}}</div>
+      <div class="my-3">evenStringKeyUp:which {{(evenStringKeyUp | async)?.which}}</div>
+      <div class="my-3">evenStringKeyUp:charCode {{(evenStringKeyUp | async)?.charCode}}</div>
+      <div class="my-3">evenStringKeyUp:code {{(evenStringKeyUp | async)?.code}}</div>
+      <div class="my-3">evenStringKeyUp:keyCode {{(evenStringKeyUp | async)?.keyCode}}</div>
     </div>
   </div>
 </div>
